portfolio/src/App.css
body {
  height: 100%;
  margin: 0;
  padding: 0;
}

#root {
  display: flex;
  flex-direction: column;
  min-height: 100%;
  color: white;
  /* background-color: #d7d9ce; */
}

.content {
  flex: 1;
}

.nav-menu {
  list-style: none;
  display: flex;
  height: 3rem;
  justify-content: center;
  padding: 20;
  margin: 0;
  font-weight: bold;
  background-color: black; /* Set the background color for the navigation bar */
}

.nav-link {
  text-decoration: none;
  color: white;
  padding: 10px 20px;
}

.nav-link:hover {
  background-color: darkgrey;
}

.contact-form {
  background-color: #d7d9ce; /* Set the background color for the contact form */
  padding: 20px;
}

.contact-form h2 {
  color: #13505b; /* Set the text color for the heading */
  margin-bottom: 20px;
}

.contact-form label {
  color: #d7d9ce; /* Set the text color for the labels */
}

.contact-form input,
.contact-form textarea {
  background-color: #f2f2f2; /* Set the background color for the input fields and textarea */
  border: none;
  padding: 10px;
  margin-bottom: 10px;
  margin-right: 50px;
  width: 100%; /* Add this line to set the width of the input fields and textarea */
  font-family: inherit; /* Use the same font as the parent element */
  font-size: inherit;
}

.contact-form textarea {
  height: 50rem; /* Adjust the height of the textarea */
}

.contact-form button {
  background-color: #0c7489; /* Set the background color for the submit button */
  color: #d7d9ce; /* Set the text color for the submit button */
  border: none;
  padding: 10px 20px;
  cursor: pointer;
}

.contact-form button:hover {
  background-color: #13505b; /* Set the background color for the submit button on hover */
}

.footer-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  color: white;
  background-color: black; /* Set the background color for the whole footer container */
}


.social-icons {
  margin-bottom: 10px;
}

.social-icons a {
  display: inline-block;
  margin: 0 10px; /* Update the margin values to add space between the icons */
  font-size: 30px; /* Adjust the font size to make the icons bigger */
  color: white; /* Set the color to black */
}

.footer-text {
  margin-top: 10px;
}

.error-message {
  color: red;
}

.thank-you-message {
  color: green;
  font-weight: bold;
  text-align: center;
}

.aboutContainer {
  display: flex;
  align-items: center;
  position: relative;
  justify-content: center;
}

.particleContainer {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
}

.contentContainer {
  /* background-color: #d7d9ce; */
  padding: 20px;
}

.picDiv {
  flex: 0 0 25%;
  max-width: 25%;
}

.picDiv img {
  max-width: 100%;
  height: auto;
}

.textDiv {
  flex: 1;
  color: white;
  padding: 20px;
  border-radius: 10px;
  font-size: 25px;
}

.button {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 200px;
  height: 60px;
  background-color: lightgray;
  color: black;
  font-size: 20px;
  font-weight: bold;
  border: none;
  border-radius: 10px;
  cursor: pointer;
  margin: 0 auto;
}

.button:hover {
  background-color: darkgray;
}

.project-list {
  color: black;
}

.portfolioAbout {
  color: black;
}

.portfolio-container {
  max-width: 800px;
  margin: 0 auto;
  padding: 20px;
}

.portfolio-title {
  font-size: 24px;
  margin-bottom: 10px;
}

.portfolio-about {
  margin-bottom: 20px;
}

.project-list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-gap: 20px;
}

.project-card {
  padding: 20px;
  background-color: #f2f2f2;
  border-radius: 5px;
}

.project-title {
  font-size: 18px;
  margin-bottom: 10px;
}

.project-description {
  margin-bottom: 10px;
}

.project-link {
  display: inline-block;
  color: #0c7489;
  text-decoration: none;
}

.project-link:hover {
  text-decoration: underline;
}

.resume-container {
  padding: 20px;
  border-radius: 10px;
}

.resume-title {
  font-size: 24px;
  font-weight: bold;
  color: white;
  margin-bottom: 10px;
}

.resume-subtitle {
  font-size: 18px;
  font-weight: bold;
  color: white;
  margin-bottom: 10px;
}

.resume-topics-list {
  list-style-type: none;
  color: white;
  padding: 0;
  margin: 0;
}

.resume-topics-list li {
  font-size: 16px;
  margin-bottom: 5px;
}

